# vyatta-config-mgmt

./: .frlog  .gitignore  Makefile.am  README  configure.ac
debian/: README  changelog  control  copyright  lintian  rules  vyatta-config-mgmt.postinst.in
lib/Vyatta/: ConfigMgmt.pm
scripts/: vyatta-commit-push.pl  vyatta-commit-revs.pl  vyatta-config-mgmt.pl
templates-cfg/system/config-management/commit-archive/: node.def
templates-cfg/system/config-management/commit-archive/location/: node.def
templates-cfg/system/config-management/commit-archive/source-address/: node.def
templates-cfg/system/config-mgmt/: node.def
templates-cfg/system/config-mgmt/commit-revisions/: node.def
templates-cfg/system/config-mgmt/remote-archive/: node.def
templates-op/show/system/commit/: node.def
templates-op/show/system/commit/diff/: node.def
templates-op/show/system/commit/diff/node.tag/: node.def
templates-op/show/system/commit/file/: node.def
templates-op/show/system/commit/file/node.tag/: node.def
templates-op/show/system/commit/file/node.tag/compare/: node.def
templates-op/show/system/commit/file/node.tag/compare/node.tag/: node.def
templates-op/show/system/commit/file/node.tag/compare/node.tag/commands/: node.def
